--- a/sass/components/_copyright.scss
+++ b/sass/components/_copyright.scss
@@ -1,7 +1,7 @@
 // Copyright styling
 // -----------------
 .copyright {
-  padding: 19px 0 21px;
+  padding: 19px 0 18px;
   margin-top: 19px;
   border-top: 1px solid $footerText;
 }
